프론트 수정

--- a/src/main/resources/templates/manager/manageregi.html
+++ b/src/main/resources/templates/manager/manageregi.html
@@ -324,7 +324,7 @@
         //비밀번호 암호화
         $managerPw.val(btoa($managerPw.val()));
         console.log($managerPw.val());
-        managerApplication.submit();
+        $managerApplication.submit();
 
     }
 
