--- a/src/main/resources/static/asset/css/regi.css
+++ b/src/main/resources/static/asset/css/regi.css
@@ -775,3 +775,70 @@ button {
     color: #e30606;
     display: inline-block;
 }
+
+#modal.modal-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
+#modal .modal-window {
+    background: white;
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 13.5px );
+    -webkit-backdrop-filter: blur( 13.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    width: 900px;
+    height: 500px;
+    position: relative;
+    top: -100px;
+    padding: 10px;
+}
+#modal .title {
+    padding-left: 10px;
+    display: inline;
+    color: black;
+
+}
+#modal .title h2 {
+    display: inline;
+}
+#modal .close-area {
+    display: inline;
+    float: right;
+    padding-right: 10px;
+    cursor: pointer;
+    color: black;
+}
+
+#modal .content {
+    margin-top: 20px;
+    padding: 0px 10px;
+    color: black;
+}
+
+#btn-modal {
+    cursor: pointer;
+}
+
+.context-block > .info .title {
+    border-bottom: 1px solid rgb(230, 230, 230);
+    padding: 24px 0px;
+    font-size: 12px;
+    letter-spacing: -0.3px;
+    color: rgba(0, 0, 0, 0.7);
+    margin: 0px;
+}
+
