--- a/src/main/resources/templates/user/regi1.html
+++ b/src/main/resources/templates/user/regi1.html
@@ -71,8 +71,45 @@
                                             <div class="sc-cooIXK fRCQoH">
                                                 <input type="checkbox" id="join_check" name="join_check"> <label>&nbsp;&nbsp; 서비스 이용 약관 및 개인 정보 처리 방침 동의</label>
                                             </div>
-                                            <p class="sc-gmeYpB bwhqaA">이용약관 확인하기</p>
-                                            <p class="sc-gmeYpB bwhqaA">개인정보 처리방침 확인하기</p>
+                                            <p class="sc-gmeYpB bwhqaA" id="btn-modal" >이용약관 확인하기</p>
+                                            <!--모달-->
+                                            <div id="modal" class="modal-overlay">
+                                                <div class="modal-window">
+                                                    <div class="title">
+                                                        <p>이용약관 확인</p>
+                                                    </div>
+                                                    <div class="close-area">X</div>
+                                                    <div class="context-block">
+                                                        <h3>제 1조(목적)</h3>
+                                                        <p>본 약관은 ㈜블루카멜(이하 “회사”라 한다)가 제공하는 돌보미 병원 동행 서비스와 관련하여 회사와 회원과의 권리,</p>
+                                                        <p>의무 및 책임 사항, 그리고 기타 필요한 사항을 규정함을 목적으로 합니다.</p>
+                                                        <p>본 서비스 이용약관은 2021년 12월 20일부터 시행됩니다.</p>
+                                                    </div>
+                                                    <div class="context-block">
+                                                        <h3>제 2조(정의)</h3>
+                                                        <h5>1. 본 약관에서 사용하는 용어의 정의는 다음과 같습니다.</h5>
+                                                        <div class="info">
+                                                        <p class="title">“돌보미 서비스” 혹은 “서비스”라 함은 당사가 제공하는 ‘병원 동행 서비스’를 의미합니다.</p>
+                                                        <p class="title">“회원”이라 함은 회사가 제공하는 서비스를 이용하기 위하여 본 약관에 동의하고 회사의 회원으로 가입하는 자를 말합니다. (단, 메니저와 관련된 사실 관계에 한하여, 메니저도 본 약관에서 “회원”에 포함될 수 있습니다)</p>
+                                                        <p class="title">“메니저”라 함은 회사가 회원에게 서비스를 제공하기 위해 직접 선별하고 교육하여 ‘프리랜서’의 형태로 간접 고용한 인원을 말합니다.</p>
+                                                        <p class="title">“운송사업자"라 함은 여객자동차 운수사업법 제4조에 따른 면허를 받은 여객자동차 운송사업자로서, 회사(메이트 인력)의 중개 또는 회원 스스로를 통해 택시 등 그 면허를 받은 운송 수단을 이용하여 운송서비스를 제공하는 자를 의미합니다.</p>
+                                                        <p class="title">“매칭”이라 함은 회원이 플랫폼(웹사이트 포함)에서 출발지와 목적지를 입력하고, “예약하기" 버튼을 통해 서비스 이용을 요청(이하 “이용 요청”이라고 합니다)하면, 요청 시점에 서비스 제공이 가능한 메이트가 플랫폼(웹사이트 포함)을 통하여 수락함으로써(매칭됨으로써), 회원과 회사 사이의 메이트 알선 계약 및 회원과 운송사업자 간의 운송 계약이 각 체결된 상태를 의미합니다.</p>
+                                                        <p class="title">“플랫폼(웹사이트 포함)”이라 함은 회사가 회원에게 서비스를 제공하기 위하여 개발한 위드메이트 애플리케이션과 웹사이트를 의미합니다.</p>
+                                                        <p class="title">“이용요금”이라 함은
+                                                        <br>
+                                                        (i) 메이트가 제공하는 의료 동행 서비스에 대한 비용
+                                                        <br>
+                                                        (ii) 회원이 택시 등 운송사업자의 운송 수단을 예약하거나 호출하여 이동하는 비용,
+                                                        <br>
+                                                            (iii) 기타 비용(고객 소유 자가용 대리 운전 비용, 예약 취소 및 변경 수수료 등)을 총칭하여 의미합니다.</p>
+                                                        </div>
+                                                    <h5 style="margin-top: 56px;">
+                                                        2. 본 약관에서 사용하는 용어의 정의는 본 조제 1항에서 정하는 것을 제외하고는 관계 법령에서 정하는 바에 의합니다. 관계 법령에서 정하지 않는 것은 일반적인 상 관례에 의합니다.
+                                                    </h5>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <p class="sc-gmeYpB bwhqaA" id="btn-modal">개인정보 처리방침 확인하기</p>
                                             <div class="sc-VigVT dUXpIL"></div>
                                             <button type="button"
                                                     class="ant-btn ant-btn-primary"
@@ -99,6 +136,36 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
+
+    const loremIpsum = document.getElementById("lorem-ipsum")
+    fetch("https://baconipsum.com/api/?type=all-meat&paras=200&format=html")
+        .then(response => response.text())
+        .then(result => loremIpsum.innerHTML = result)
+
+    const modal = document.getElementById("modal")
+    const btnModal = document.getElementById("btn-modal")
+    btnModal.addEventListener("click", e => {
+        modal.style.display = "flex"
+    })
+
+    const closeBtn = modal.querySelector(".close-area")
+    closeBtn.addEventListener("click", e => {
+        modal.style.display = "none"
+    })
+
+    modal.addEventListener("click", e => {
+        const evTarget = e.target
+        if(evTarget.classList.contains("modal-overlay")) {
+            modal.style.display = "none"
+        }
+    })
+
+    window.addEventListener("keyup", e => {
+        if(modal.style.display === "flex" && e.key === "Escape") {
+            modal.style.display = "none"
+        }
+    })
+
     let $userGender = $("input[name='userGender']")
     /*유효성 검사 */
     function regi1Confirm(){
