--- a/src/main/resources/templates/member/profilechange.html
+++ b/src/main/resources/templates/member/profilechange.html
@@ -29,7 +29,7 @@
     <!-- //sub_title_wrap -->
     <!-- form_wrap -->
 
-    <form id="frm" action="member/profileupdate" method="post" enctype="" th:object="${profile1}">
+    <form id="frm" action="member/profileupdate" method="post" enctype="multipart/form-data" th:if="${profile1}">
         <input type="hidden" name="memberSysId" id="memberSysId" value="">
         <input type="hidden" name="currUserId" id="currUserId" value="">
         <input type="hidden" name="currPhoneNo" id="currPhoneNo" value="">
@@ -51,7 +51,7 @@
                     <div class="column">
                         <p>아이디</p>
                         <div class="dp_flex">
-                            <input type="text" name="userId" id="userId" maxlength="30" placeholder="아이디" th:value="*{userEmail}"
+                            <input type="text" name="userId" id="userId" maxlength="30" placeholder="아이디" th:value="${session.userVO.userEmail}"
                                    disabled="disabled">
                         </div>
                         <span id="userIdChkNotice"></span>
@@ -61,7 +61,7 @@
                     <div class="column">
                         <p>성함</p>
                         <div class="dp_flex">
-                            <input type="text" name="userName" id="userName" maxlength="10" placeholder="성함" th:value="*{userName}">
+                            <input type="text" name="userName" id="userName" maxlength="10" placeholder="성함" th:value="${session.userVO.userName}">
                         </div>
                         <span id="memberNmChkNotice"></span>
                     </div>
@@ -277,7 +277,260 @@
         <div class="button_wrap form_wrap">
             <!--매니저일 때 href="/member/exitM"-->
             <!--회원일 때 href="/member/exitU"-->
-            <a id="withdraw" >회원탈퇴</a>
+            <a href="/member/delete">회원탈퇴</a>
+            <a href="/member/mainpage">취소</a>
+            <a id="profilechange" class="primary" >저장</a>
+        </div>
+    </form>
+    <form id="frm" action="member/profileupdate" method="post" enctype="multipart/form-data" th:if="${profile2}">
+        <input type="hidden" name="memberSysId" id="memberSysId" value="">
+        <input type="hidden" name="currUserId" id="currUserId" value="">
+        <input type="hidden" name="currPhoneNo" id="currPhoneNo" value="">
+        <div class="form_wrap">
+            <div class="border_wrap">
+                <div class="dp_result">
+                    <div class="column">
+                        <div class="photo">
+                            <img src="https://www.mosimi.co.kr/resource/images/common/ico_face.svg" id="previewImg"
+                                 width="200" height="200"/>
+
+                        </div>
+                        <p>프로필 이미지 변경</p>
+                        <input type="file" id="viewImg" name="viewImg" accept='image/*' style="margin-top: 30px; height: 29px;   padding-left: 44%;" />
+
+                    </div>
+                </div>
+                <div class="dp_result">
+                    <div class="column">
+                        <p>아이디</p>
+                        <div class="dp_flex">
+                            <input type="text" name="userId" id="userId" maxlength="30" placeholder="아이디" th:value="${session.managerVO.managerEmail}"
+                                   disabled="disabled">
+                        </div>
+                        <span id="userIdChkNotice"></span>
+                    </div>
+                </div>
+                <div class="dp_result">
+                    <div class="column">
+                        <p>성함</p>
+                        <div class="dp_flex">
+                            <input type="text" name="userName" id="userName" maxlength="10" placeholder="성함" th:value="${session.managerVO.managerName}">
+                        </div>
+                        <span id="memberNmChkNotice"></span>
+                    </div>
+                    <div class="column">
+                        <p >생년월일</p>
+                        <div class="dp_flex date" data-term="100">
+                            <select name="birthYear" id="birthYear" class="birth" data-default-option="년" data-unit="y" >
+                                <option >년</option>
+                                <option value="2022">2022</option>
+                                <option value="2021">2021</option>
+                                <option value="2020">2020</option>
+                                <option value="2019">2019</option>
+                                <option value="2018">2018</option>
+                                <option value="2017">2017</option>
+                                <option value="2016">2016</option>
+                                <option value="2015">2015</option>
+                                <option value="2014">2014</option>
+                                <option value="2013">2013</option>
+                                <option value="2012">2012</option>
+                                <option value="2011">2011</option>
+                                <option value="2010">2010</option>
+                                <option value="2009">2009</option>
+                                <option value="2008">2008</option>
+                                <option value="2007">2007</option>
+                                <option value="2006">2006</option>
+                                <option value="2005">2005</option>
+                                <option value="2004">2004</option>
+                                <option value="2003">2003</option>
+                                <option value="2002">2002</option>
+                                <option value="2001">2001</option>
+                                <option value="2000">2000</option>
+                                <option value="1999">1999</option>
+                                <option value="1998">1998</option>
+                                <option value="1997">1997</option>
+                                <option value="1996">1996</option>
+                                <option value="1995">1995</option>
+                                <option value="1994">1994</option>
+                                <option value="1993">1993</option>
+                                <option value="1992">1992</option>
+                                <option value="1991">1991</option>
+                                <option value="1990">1990</option>
+                                <option value="1989">1989</option>
+                                <option value="1988">1988</option>
+                                <option value="1987">1987</option>
+                                <option value="1986">1986</option>
+                                <option value="1985">1985</option>
+                                <option value="1984">1984</option>
+                                <option value="1983">1983</option>
+                                <option value="1982">1982</option>
+                                <option value="1981">1981</option>
+                                <option value="1980">1980</option>
+                                <option value="1979">1979</option>
+                                <option value="1978">1978</option>
+                                <option value="1977">1977</option>
+                                <option value="1976">1976</option>
+                                <option value="1975">1975</option>
+                                <option value="1974">1974</option>
+                                <option value="1973">1973</option>
+                                <option value="1972">1972</option>
+                                <option value="1971">1971</option>
+                                <option value="1970">1970</option>
+                                <option value="1969">1969</option>
+                                <option value="1968">1968</option>
+                                <option value="1967">1967</option>
+                                <option value="1966">1966</option>
+                                <option value="1965">1965</option>
+                                <option value="1964">1964</option>
+                                <option value="1963">1963</option>
+                                <option value="1962">1962</option>
+                                <option value="1961">1961</option>
+                                <option value="1960">1960</option>
+                                <option value="1959">1959</option>
+                                <option value="1958">1958</option>
+                                <option value="1957">1957</option>
+                                <option value="1956">1956</option>
+                                <option value="1955">1955</option>
+                                <option value="1954">1954</option>
+                                <option value="1953">1953</option>
+                                <option value="1952">1952</option>
+                                <option value="1951">1951</option>
+                                <option value="1950">1950</option>
+                                <option value="1949">1949</option>
+                                <option value="1948">1948</option>
+                                <option value="1947">1947</option>
+                                <option value="1946">1946</option>
+                                <option value="1945">1945</option>
+                                <option value="1944">1944</option>
+                                <option value="1943">1943</option>
+                                <option value="1942">1942</option>
+                                <option value="1941">1941</option>
+                                <option value="1940">1940</option>
+                                <option value="1939">1939</option>
+                                <option value="1938">1938</option>
+                                <option value="1937">1937</option>
+                                <option value="1936">1936</option>
+                                <option value="1935">1935</option>
+                                <option value="1934">1934</option>
+                                <option value="1933">1933</option>
+                                <option value="1932">1932</option>
+                                <option value="1931">1931</option>
+                                <option value="1930">1930</option>
+                                <option value="1929">1929</option>
+                                <option value="1928">1928</option>
+                                <option value="1927">1927</option>
+                                <option value="1926">1926</option>
+                                <option value="1925">1925</option>
+                                <option value="1924">1924</option>
+                                <option value="1923">1923</option>
+                                <option value="1922">1922</option>
+                            </select>
+                            <select name="birthMonth" id="birthMonth" class="birth" data-default-option="월"
+                                    data-unit="m">
+                                <option value="">월</option>
+                                <option value="01">01</option>
+                                <option value="02">02</option>
+                                <option value="03">03</option>
+                                <option value="04">04</option>
+                                <option value="05">05</option>
+                                <option value="06">06</option>
+                                <option value="07">07</option>
+                                <option value="08">08</option>
+                                <option value="09">09</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                            </select>
+                            <select name="birthDay" id="birthDay" class="birth" data-default-option="일" data-unit="d">
+                                <option value="">일</option>
+                                <option value="01">01</option>
+                                <option value="02">02</option>
+                                <option value="03">03</option>
+                                <option value="04">04</option>
+                                <option value="05">05</option>
+                                <option value="06">06</option>
+                                <option value="07">07</option>
+                                <option value="08">08</option>
+                                <option value="09">09</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                                <option value="21">21</option>
+                                <option value="22">22</option>
+                                <option value="23">23</option>
+                                <option value="24">24</option>
+                                <option value="25">25</option>
+                                <option value="26">26</option>
+                                <option value="27">27</option>
+                                <option value="28">28</option>
+                                <option value="29">29</option>
+                                <option value="30">30</option>
+                                <option value="31">31</option>
+                            </select>
+                        </div>
+                        <span id="birthDateChkNotice"></span>
+                    </div>
+                </div>
+                <div class="dp_result">
+                    <div class="column">
+                        <p>연락처</p>
+                        <div class="dp_flex multi">
+                            <div class="fx_full">
+                                <select name="phoneNo1" id="phoneNo1">
+
+
+                                    <option value="010" selected="">010</option>
+
+
+                                    <option value="011">011</option>
+
+
+                                    <option value="016">016</option>
+
+
+                                    <option value="017">017</option>
+
+
+                                    <option value="019">019</option>
+
+                                </select>
+                                <input type="number" name="phoneNo2" id="phoneNo2" maxlength="4" value="">
+                                <input type="number" name="phoneNo3" id="phoneNo3" maxlength="4" value="">
+                            </div>
+                            <div class="button_wrap">
+                                <a id="sendSmsCert" href="">인증번호발송</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dp_result">
+                    <div class="column">
+                        <div class="dp_flex multi">
+                            <div class="fx_full">
+                                <input type="text" name="certNo" id="certNo" maxlength="6" placeholder="인증번호">
+                            </div>
+                            <div class="button_wrap">
+                                <a id="smsCert" href="">인증번호확인</a>
+                            </div>
+                        </div>
+                        <span id="certNoChkNotice"></span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="button_wrap form_wrap">
+            <!--매니저일 때 href="/member/exitM"-->
+            <!--회원일 때 href="/member/exitU"-->
+            <a href="/member/delete">회원탈퇴</a>
             <a href="/member/mainpage">취소</a>
             <a id="profilechange" class="primary" >저장</a>
         </div>
@@ -331,10 +584,10 @@
     let userEmail = [[ ${session.userEmail} ]];
 
     /*]]*/
-    $("a#withdraw").click(function(e){
+  /*  $("a#withdraw").click(function(e){
         e.preventDefault();
         location.href = "/member/delete" ;
-    })
+    })*/
 
     $("a#profilechange").click(function(e){
         e.preventDefault();
