--- a/src/main/resources/static/asset/css/user_usedetails.css
+++ b/src/main/resources/static/asset/css/user_usedetails.css
@@ -149,9 +149,18 @@ em, address {
 }
 
 .com_accordion {
+    width: 114%;
+    margin: 20px 0;
+    position: relative;
+    left: -51px;
+}
+
+.servicing {
     width: 100%;
     margin: 20px 0;
+    left: 0px;
 }
+
 
 .com_accordion ul {
     display: flex;
