--- a/src/main/resources/templates/user/user_userdetails.html
+++ b/src/main/resources/templates/user/user_userdetails.html
@@ -45,12 +45,12 @@
                 <li id="end" onclick="location.href='/user/user_userdetails4'"><span>종료</span><em th:text="*{totallist4}+*{totallist8}"></em></li>
             </ul>
         </div>
-
-        <div class="com_accordion assignment" >
+     <form action="/user/matchingAccept" method="post" name="matching">
+        <div class="com_accordion assignment" th:object="${accreservationlist}" th:if="${accreservationlist}">
             <ul>
                 <!-- 매니저 배정 전... -->
                 <li class="history">
-                    <div class="ac_title" th:object="${accreservationlist}" th:if="${accreservationlist}">
+                    <div class="ac_title">
 
                         <p class="service_a">동행서비스</p>
                         <div class="left_con">
@@ -90,13 +90,15 @@
                         </div>
                     </div>
                 </li>
-
+            </ul>
+        </div>
+        <div class="com_accordion assignment" th:object="${accmanagerInfo}" th:if="${accmanagerInfo}" >
+            <ul>
                 <!-- 매니저 배정 후 선택 -->
 
                 <li class="history assigned">
-                  <form action="/user/matchingAccept" method="post" name="matching">
-                    <div class="ac_title" th:object="${accmanagerInfo}" th:if="${accmanagerInfo}" >
-                        <input type="hidden" th:field="*{accReservationNum}">
+                    <div class="ac_title">
+                        <input type="hidden" name="accReservationNum" th:value="*{accReservationNum}">
                         <p class="service_a">동행서비스</p>
                         <div class="left_con">
                             <p>
@@ -140,7 +142,6 @@
                             </div>
                         </div>
                     </div>
-                  </form>
                     <div class="ac_detail servicelist" style="overflow: hidden; display: none;">
                         <div class="detail_wrap">
                             <div class="left_con" th:object="${accreservationlist}" th:if="${accreservationlist}">
@@ -172,11 +173,11 @@
         <!-- 배정요청 -->
 
 
-        <div class="com_accordion assignment" >
+        <div class="com_accordion assignment" th:object="${carereservationlist}" th:if="${carereservationlist}">
             <ul>
                 <!-- 매니저 배정 전... -->
                 <li class="history">
-                    <div class="ac_title" th:object="${carereservationlist}" th:if="${carereservationlist}">
+                    <div class="ac_title">
 
                         <p class="service_b">돌봄서비스</p>
                         <div class="left_con">
@@ -213,13 +214,15 @@
                         </div>
                     </div>
                 </li>
-
+            </ul>
+        </div>
+        <div class="com_accordion assignment"  th:object="${caremanagerInfo}" th:if="${caremanagerInfo}" >
+            <ul>
                 <!-- 매니저 배정 후 선택 -->
 
                 <li class="history assigned">
-                   <form action="/user/matchingAccept" method="post" name="matching">
-                    <div class="ac_title"  th:object="${caremanagerInfo}" th:if="${caremanagerInfo}" >
-                        <input type="hidden" th:field="*{careReservationNum}">
+                    <div class="ac_title">
+                        <input type="hidden" name="careReservationNum" th:value="*{careReservationNum}">
                         <p class="service_b">돌봄서비스</p>
                         <div class="left_con">
                             <p>
@@ -263,7 +266,6 @@
                             </div>
                         </div>
                     </div>
-                   </form>
                     <div class="ac_detail servicelist" style="overflow: hidden; display: none;">
                         <div class="detail_wrap">
                             <div class="left_con" th:object="${carereservationList}" th:if="${carereservationList}">
@@ -285,10 +287,9 @@
                         </div>
                     </div>
                 </li>
-
             </ul>
         </div>
-
+     </form>
     </div>
 </div>
 <footer th:replace="footer.html"></footer>
@@ -311,7 +312,7 @@
  /*       $(this).parent().parent().parent().parent('li').css('display', 'none');
         $(".assignment").css('display', 'none');
         $(".reservation").css('display', 'block');*/
-        $("form[name='matching']").submit();
+        matching.submit();
     })
 
     /* 거절버튼 클릭 */
