--- a/src/main/resources/templates/manager/manager2.html
+++ b/src/main/resources/templates/manager/manager2.html
@@ -18,7 +18,6 @@
         }
     </style>
 </head>
-<body>
 <header th:replace="header.html"></header>
 <div class="sub_page_wrap">
     <div class="sub_title_wrap title_only">
@@ -42,230 +41,226 @@
     </div>
 </div>
 <!-- 목록시작 -->
+<form action="/manager/endService" method="post" name="reservForm3">
+    <div class="com_accordion" >
+        <ul style="    margin: 0% 17% 0% 17%;">
+            <li class="history">
+                <div class="ac_title" th:object="${carereservationlist}"  th:if="${carereservationlist}" >
+                    <input type="hidden" th:field="*{careReservationNum}">
+                    <p class="service_a" style="background: #3d7ed8;">돌봄</p>
+                    <div class="left_con" style="padding-right:37px">
+                        <p>
+                            <span class="title" style="margin-right: 89px">이용자</span>
+                            <span th:text="*{careReservationName}"></span>
+                        </p>
+                        <p>
+                            <span class="title" >돌봄일정 및 방문시간</span>
+                            <span th:text="*{#strings.substring(careReservationDate,0,10)}"></span>
+                            <span th:text="*{#strings.substring(careReservationDate,11,16)}"></span>
+                        </p>
+                        <p>
+                            <span class="title" style="margin-right: 76px">이용시간</span>
+                            <span th:text="|*{careReservationTime}시간|"></span>
+                        </p>
 
-<div class="com_accordion" >
-    <ul style="    margin: 0% 17% 0% 17%;">
-        <li class="history">
-          <form action="/manager/endService" method="post" name="reservForm3">
-            <div class="ac_title" th:object="${carereservationlist}"  th:if="${carereservationlist}" >
-                <input type="hidden" th:field="*{careReservationNum}">
-                <p class="service_a" style="background: #3d7ed8;">돌봄</p>
-                <div class="left_con" style="padding-right:37px">
-                    <p>
-                        <span class="title" style="margin-right: 89px">이용자</span>
-                        <span th:text="*{careReservationName}"></span>
-                    </p>
-                    <p>
-                        <span class="title" style="margin-right: 89px">돌봄일정 및 방문시간</span>
-                        <span th:text="*{#strings.substring(careReservationDate,0,10)}"></span>
-                        <span th:text="*{#strings.substring(careReservationDate,11,16)}"></span>
-                    </p>
-                    <p>
-                        <span class="title" style="margin-right: 76px">이용시간</span>
-                        <span th:text="|*{careReservationTime}시간|"></span>
-                    </p>
-
-                    <p>
-                        <span class="title" style="margin-right: 90px">목적지</span>
-                        <span th:text="*{careReservationAddress}"><br></span>
-                    </p>
-                    <hr style="border : 0px; width: 100%;
-                                border-top: 2px solid #e8e6e7;
-                                width: 100%;
-                                margin: 20px 0 20px 0;"/>
-                    <button type="button" id="test04" style="color: #666666;
-                            font-weight: 900;
-                            cursor: pointer;
-                            align-self: center;
-                            margin-right: 115px;
-                            background-color: white;
-                            font-size: 15px;
-                        ">업무일지 작성</button>
-                </div>
-                <button style=" background-color: #3d7ed8;
-            color: white;
-            padding: 12px 20px 12px 20px;
-            font-size: 15px;
-            font-weight: 700;
-            position: absolute;
-            right: 15px;
-            border-radius: 6px;
-            margin-right: 20px;
-            bottom: 73px
-        ">
-                    서비스중
-                </button>
-
-            </div>
-          </form>
-        </li>
-    </ul>
-</div>
-
-
-<div class="com_accordion" id="test05"  style="display:none;
-                background: #fdfdfd;
-                border: 1px solid #cacaca;
-                position: relative;
-                border-radius: 30px;
-                overflow: hidden;
-                flex-direction: column;
-                flex-wrap: wrap;
-                display: flex;
-                padding: 0;
-                cursor: pointer;
-                font-size: 18px;
-                font-weight: 200;
-                color: #161616;
-                justify-content: flex-start;
-                align-items: center;
-                z-index: 1;
-
-                display: none;
-                width: 66%;
-        margin: 0% 17% 0% 17%;
-            ">
-    <div class="sc-fjdhpX hoWkSp" style="    padding: 24px 0 12px 37px;
-                color: gray;
-                font-weight: 600;">
-        업무 보고 작성
-    </div>
-    <textarea type="text" placeholder="업무 보고 일지 및 전달사항" name="comment" class="ant-input sc-kgoBCf jdYHBr"
-              style="width: 94%;
-                height: 163px;
-                margin: 10px 38px 97px 38px;
-                resize: none;
-                border-color: #c4c4c4;
-                padding: 8px;
-                font-size: 15px;
-                ">
-                </textarea>
-    <button  class="openPopup1" style=" background-color: #3d7ed8;
-                color: white;
-                padding: 12px 20px 12px 20px;
-                font-size: 15px;
-                font-weight: 700;
-                position: absolute;
-                bottom: 26px;
-                border-radius: 6px;
-                margin-right: 20px;
-    right: 21px;
-            ">
-        서비스 종료
-    </button>
-</div>
-<div class="com_accordion" >
-    <ul style="    margin: 0% 17% 0% 17%;">
-        <li class="history">
-          <form action="/manager/endService" method="post" name="reservForm3">
-            <div class="ac_title" th:object="${accreservationlist}" th:if="${accreservationlist}">
-                <input type="hidden" th:field="*{accReservationNum}">
-                <p class="service_a">동행</p>
-                <div class="left_con" style="padding-right:37px" >
-                    <p>
-                        <span class="title" style="margin-right: 89px">이용자</span>
-                        <span th:text="*{accReservationName}"></span>
-                    </p>
-                    <p>
-                        <span class="title">동행일정 및 방문시간</span>
-                        <span th:text="*{#strings.substring(accReservationDate,0,10)}"></span>
-                        <span th:text="*{#strings.substring(accReservationDate,11,16)}"></span>
-                    </p>
-                    <p>
-                        <span class="title" style="margin-right: 76px">이용시간</span>
-                        <span th:text="|*{accReservationTime}시간|"></span>
-                    </p>
-                    <p>
-                        <span class="title" style="margin-right: 90px">출발지</span>
-                        <span th:text="*{accReservationStartAddress}"></span>
-                    </p>
-                    <p>
-                        <span class="title" style="margin-right: 90px">목적지</span>
-                        <span th:text="*{accReservationEndAddress}"><br></span>
-                    </p>
-                    <hr style="border : 0px; width: 100%;
-                                border-top: 2px solid #e8e6e7;
-                                width: 100%;
-                                margin: 20px 0 20px 0;"/>
-                    <button type="button" id="test01" style="color: #666666;
-                            font-weight: 900;
-                            cursor: pointer;
-                            align-self: center;
-                            margin-right: 115px;
-                            background-color: white;
-                            font-size: 15px;
-                        ">업무일지 작성</button>
-                </div>
-                <button style=" background-color: #f7579f;
+                        <p>
+                            <span class="title" style="margin-right: 90px">목적지</span>
+                            <span th:text="*{careReservationAddress}"><br></span>
+                        </p>
+                        <hr style="border : 0px; width: 100%;
+                                    border-top: 2px solid #e8e6e7;
+                                    width: 100%;
+                                    margin: 20px 0 20px 0;"/>
+                        <button type="button" id="test04" style="color: #666666;
+                                font-weight: 900;
+                                cursor: pointer;
+                                align-self: center;
+                                margin-right: 115px;
+                                background-color: white;
+                                font-size: 15px;
+                            ">업무일지 작성</button>
+                    </div>
+                    <button type="button" style=" background-color: #3d7ed8;
                 color: white;
                 padding: 12px 20px 12px 20px;
                 font-size: 15px;
                 font-weight: 700;
                 position: absolute;
                 right: 15px;
-                bottom: 73px;
-                border-radius: 6px;
-                margin-right: 20px
-            ">
-                    서비스중
-                </button>
-            </div>
-          </form>
-        </li>
-    </ul>
-</div>
-<div class="com_accordion" id="test02"  style="display:none;
-                background: #fdfdfd;
-                border: 1px solid #cacaca;
-                position: relative;
-                border-radius: 30px;
-                overflow: hidden;
-                flex-direction: column;
-                flex-wrap: wrap;
-                display: flex;
-                padding: 0;
-                cursor: pointer;
-                font-size: 18px;
-                font-weight: 200;
-                color: #161616;
-                justify-content: flex-start;
-                align-items: center;
-                z-index: 1;
-
-                display: none;
-                width: 66%;
-        margin: 0% 17% 0% 17%;
-            ">
-    <div class="sc-fjdhpX hoWkSp" style="    padding: 24px 0 12px 37px;
-                color: gray;
-                font-weight: 600;">
-        업무 보고 작성
-    </div>
-    <textarea type="text" placeholder="업무 보고 일지 및 전달사항" name="comment" class="ant-input sc-kgoBCf jdYHBr"
-              style="width: 94%;
-                height: 163px;
-                margin: 10px 38px 97px 38px;
-                resize: none;
-                border-color: #c4c4c4;
-                padding: 8px;
-                font-size: 18px;
-                ">
-                </textarea>
-    <button  class="openPopup1" style=" background-color: #f7579f;
-                color: white;
-                padding: 12px 20px 12px 20px;
-                font-size: 15px;
-                font-weight: 700;
-                position: absolute;
-                bottom: 26px;
                 border-radius: 6px;
                 margin-right: 20px;
-    right: 21px;
+                bottom: 73px
             ">
-        서비스 종료
-    </button>
-</div>
+                        서비스중
+                    </button>
 
+                </div>
+            </li>
+        </ul>
+    </div>
+
+
+    <div class="com_accordion" id="test05"  style="display:none;
+                    background: #fdfdfd;
+                    border: 1px solid #cacaca;
+                    position: relative;
+                    border-radius: 30px;
+                    overflow: hidden;
+                    flex-direction: column;
+                    flex-wrap: wrap;
+                    display: flex;
+                    padding: 0;
+                    cursor: pointer;
+                    font-size: 18px;
+                    font-weight: 200;
+                    color: #161616;
+                    justify-content: flex-start;
+                    align-items: center;
+                    z-index: 1;
+
+                    display: none;
+                    width: 66%;
+            margin: 0% 17% 0% 17%;
+                ">
+        <div class="sc-fjdhpX hoWkSp" style="    padding: 24px 0 12px 37px;
+                    color: gray;
+                    font-weight: 600;">
+            업무 보고 작성
+        </div>
+        <textarea type="text" placeholder="업무 보고 일지 및 전달사항" name="comment" class="ant-input sc-kgoBCf jdYHBr"
+                  style="width: 94%;
+                    height: 163px;
+                    margin: 10px 38px 97px 38px;
+                    resize: none;
+                    border-color: #c4c4c4;
+                    padding: 8px;
+                    font-size: 15px;
+                    ">
+                    </textarea>
+        <button type="button" class="openPopup1" style=" background-color: #3d7ed8;
+                    color: white;
+                    padding: 12px 20px 12px 20px;
+                    font-size: 15px;
+                    font-weight: 700;
+                    position: absolute;
+                    bottom: 26px;
+                    border-radius: 6px;
+                    margin-right: 20px;
+        right: 21px;
+                ">
+            서비스 종료
+        </button>
+    </div>
+    <div class="com_accordion" >
+        <ul style="    margin: 0% 17% 0% 17%;">
+            <li class="history">
+                <div class="ac_title" th:object="${accreservationlist}" th:if="${accreservationlist}">
+                    <input type="hidden" th:field="*{accReservationNum}">
+                    <p class="service_a">동행</p>
+                    <div class="left_con" style="padding-right:37px" >
+                        <p>
+                            <span class="title" style="margin-right: 89px">이용자</span>
+                            <span th:text="*{accReservationName}"></span>
+                        </p>
+                        <p>
+                            <span class="title">동행일정 및 방문시간</span>
+                            <span th:text="*{#strings.substring(accReservationDate,0,10)}"></span>
+                            <span th:text="*{#strings.substring(accReservationDate,11,16)}"></span>
+                        </p>
+                        <p>
+                            <span class="title" style="margin-right: 76px">이용시간</span>
+                            <span th:text="|*{accReservationTime}시간|"></span>
+                        </p>
+                        <p>
+                            <span class="title" style="margin-right: 90px">출발지</span>
+                            <span th:text="*{accReservationStartAddress}"></span>
+                        </p>
+                        <p>
+                            <span class="title" style="margin-right: 90px">목적지</span>
+                            <span th:text="*{accReservationEndAddress}"><br></span>
+                        </p>
+                        <hr style="border : 0px; width: 100%;
+                                    border-top: 2px solid #e8e6e7;
+                                    width: 100%;
+                                    margin: 20px 0 20px 0;"/>
+                        <button type="button" id="test01" style="color: #666666;
+                                font-weight: 900;
+                                cursor: pointer;
+                                align-self: center;
+                                margin-right: 115px;
+                                background-color: white;
+                                font-size: 15px;
+                            ">업무일지 작성</button>
+                    </div>
+                    <button type="button" style=" background-color: #f7579f;
+                    color: white;
+                    padding: 12px 20px 12px 20px;
+                    font-size: 15px;
+                    font-weight: 700;
+                    position: absolute;
+                    right: 15px;
+                    bottom: 73px;
+                    border-radius: 6px;
+                    margin-right: 20px
+                ">
+                        서비스중
+                    </button>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="com_accordion" id="test02"  style="display:none;
+                    background: #fdfdfd;
+                    border: 1px solid #cacaca;
+                    position: relative;
+                    border-radius: 30px;
+                    overflow: hidden;
+                    flex-direction: column;
+                    flex-wrap: wrap;
+                    display: flex;
+                    padding: 0;
+                    cursor: pointer;
+                    font-size: 18px;
+                    font-weight: 200;
+                    color: #161616;
+                    justify-content: flex-start;
+                    align-items: center;
+                    z-index: 1;
+
+                    display: none;
+                    width: 66%;
+            margin: 0% 17% 0% 17%;
+                ">
+        <div class="sc-fjdhpX hoWkSp" style="    padding: 24px 0 12px 37px;
+                    color: gray;
+                    font-weight: 600;">
+            업무 보고 작성
+        </div>
+        <textarea type="text" placeholder="업무 보고 일지 및 전달사항" name="comment" class="ant-input sc-kgoBCf jdYHBr"
+                  style="width: 94%;
+                    height: 163px;
+                    margin: 10px 38px 97px 38px;
+                    resize: none;
+                    border-color: #c4c4c4;
+                    padding: 8px;
+                    font-size: 18px;
+                    ">
+                    </textarea>
+        <button type="button"  class="openPopup1" style=" background-color: #f7579f;
+                    color: white;
+                    padding: 12px 20px 12px 20px;
+                    font-size: 15px;
+                    font-weight: 700;
+                    position: absolute;
+                    bottom: 26px;
+                    border-radius: 6px;
+                    margin-right: 20px;
+        right: 21px;
+                ">
+            서비스 종료
+        </button>
+    </div>
+</form>
 <footer th:replace="footer.html"></footer>
 <div id="popup01">
     <div class="close">닫기</div>
@@ -275,14 +270,14 @@
     margin-bottom: 110px;
     color: #767070;">업무완료 하시겠습니까?
     </div>
-    <button type="button" class="confirm">완료</button>
+    <button class="confirm">완료</button>
 </div>
 </body>
-<script src="/asset/js/manager.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
 
     $(".confirm").click(function () {
+        console.log("들어옴")
         $("form[name='reservForm3']").submit();
     })
 
@@ -304,6 +299,7 @@
 
     $(document).ready(function( $ ){
         $(".openPopup1").on("click", function(event) {
+            window.scrollTo(0,0);
             $("#popup01").show();
             $("body").append('<div class="backon"></div>');
         });
